syntax = "proto3";
package plutusportfolio;

service PlutusPortfolio{
    rpc SampleGet(SampleRequest) returns(SampleResponse){}
}

message SampleRequest{
    string request = 1;
}

message SampleResponse{
    string response = 1;
}